Utils/vcluster/manifests/01-test-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app.kubernetes.io/name: &name test-app
    app.kubernetes.io/instance: &instance test-app
    app.kubernetes.io/version: &version v0.0.1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/version: *version
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *instance
        app.kubernetes.io/version: *version
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
  labels:
    app.kubernetes.io/name: &name test-app
    app.kubernetes.io/instance: &instance test-app
    app.kubernetes.io/version: &version v0.0.1
spec:
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *instance
    app.kubernetes.io/version: *version
  ports:
    - port: 80
